--- a/my_page.html
+++ b/my_page.html
@@ -10,6 +10,7 @@
     <img src="../../images/me.jpg">
     <p>
         פה אתחיל לכתוב את קורות החיים שלי
+        מוכנים
     </p>
 </body>
 </html>
