expose_in_dockerfile

--- a/my_page.html
+++ b/my_page.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <h1>קורות החיים שלי</h1>
-    <img src="../../images/me.jpg">
+    <img src="./me.jpg" alt="ds">
     <p>
-        פה אתחיל לכתוב את קורות החיים שלי
+        פה אתחיל לכתוב את קורות החיים שלי<br>
         מוכנים
     </p>
 </body>
