--- a/my_page.html
+++ b/my_page.html
@@ -7,10 +7,12 @@
 </head>
 <body>
     <h1>קורות החיים שלי</h1>
-    <img src="./me.jpg" alt="ds">
+    <img width=300px src="./me.jpg" alt="ds"/>
     <p>
         פה אתחיל לכתוב את קורות החיים שלי<br>
         מוכנים
     </p>
+    <a href="">פרוייקט אזעקה</a>
+    <a href="https://github.com/MorGu246/Blood_Pressure">פרוייקט בדיקות דם</a>
 </body>
 </html>
