tweaked my_page.html

--- a/my_page.html
+++ b/my_page.html
@@ -10,9 +10,12 @@
     <img width=300px src="./me.jpg" alt="ds"/>
     <p>
         פה אתחיל לכתוב את קורות החיים שלי<br>
-        מוכנים
+        מוכנים<br>
+        בוגר מכללת כנרת<br>
+        בעל תואר של הנדסאי אלקטרוניקה<br>
+        ובעל תואר של הנדסאי תוכנה<br>
     </p>
-    <a href="">פרוייקט אזעקה</a>
+    <a href="">פרוייקט אזעקה / חנות</a>
     <a href="https://github.com/MorGu246/Blood_Pressure">פרוייקט בדיקות דם</a>
 </body>
 </html>
