--- a/my_page.html
+++ b/my_page.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,64 @@
     </p>
     <a href="">פרוייקט אזעקה / חנות</a>
     <a href="https://github.com/MorGu246/Blood_Pressure">פרוייקט בדיקות דם</a>
+</body>
+</html> -->
+<!DOCTYPE html>
+<html lang="he" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>קורות חיים - השם שלך</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header>
+        <h1>השם שלך</h1>
+        <p>תפקיד (למשל: מפתח Full Stack / מעצב גרפי)</p>
+        <div class="contact-info">
+            <span>📧 email@example.com</span> | 
+            <span>📱 050-1234567</span> | 
+            <span>🔗 <a href="#">LinkedIn</a></span>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <h2>תקציר מקצועי</h2>
+            <p>כאן כדאי לכתוב כמה משפטים על מי אתם, מה הניסיון העיקרי שלכם ומה אתם מחפשים.</p>
+        </section>
+
+        <section>
+            <h2>ניסיון תעסוקתי</h2>
+            <div class="job">
+                <h3>שם החברה | תפקיד</h3>
+                <p class="date">2022 - היום</p>
+                <ul>
+                    <li>תיאור אחריות או הישג משמעותי.</li>
+                    <li>שימוש בטכנולוגיות X ו-Y לשיפור ביצועים.</li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>השכלה</h2>
+            <div class="education">
+                <h3>שם המוסד האקדמי</h3>
+                <p>תואר ראשון במדעי המחשב (2018-2021)</p>
+            </div>
+        </section>
+
+        <section>
+            <h2>כישורים (Skills)</h2>
+            <ul class="skills-list">
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+                <li>React</li>
+                <li>Python</li>
+            </ul>
+        </section>
+    </main>
+
 </body>
 </html>
