--- a/my_page.html
+++ b/my_page.html
@@ -147,14 +147,15 @@
 
 <div class="container">
     <header>
-        <h1>ישראל ישראלי</h1>
-        <p class="subtitle">מפתח תוכנה ומומחה טכנולוגי</p>
+        <h1>מור מרדכי גואטה</h1>
+        <p class="subtitle">בעל תואר הנדסאי תוכנה</p>
         <div class="contact-info">
-            📧 <a href="mailto:israel@example.com">israel@example.com</a> | 
-            📱 050-0000000 | 
-            📍 תל אביב | 
+            📧 <a href="mailto:israel@example.com">morgueta36@gmail.com</a> | 
+            📱 053-5204692 | 
+            📍 טבריה | 
             🔗 <a href="#">LinkedIn</a>
         </div>
+        <img width=300px src="./me.jpg" alt="ds"/>
     </header>
 
     <section>
@@ -181,11 +182,11 @@
             <div class="item">
                 <div class="item-header">
                     <span>צה"ל | תפקיד טכנולוגי</span>
-                    <span class="date">2018 - 2021</span>
+                    <span class="date">2020 - 2023</span>
                 </div>
                 <ul>
-                    <li>ניהול מערכות מידע קריטיות ותמיכה טכנית רחבה.</li>
-                    <li>עבודה תחת לחץ ועמידה בלוחות זמנים צפופים.</li>
+                    <li>טכנאי תקשוב של חיל האוויר בפיקוד צפון</li>
+                    <li>כלל גם עבודה כאיש IT - עבודה עם מתגים ונתבים</li>
                 </ul>
             </div>
         </div>
@@ -196,10 +197,14 @@
         <div class="section-content">
             <div class="item">
                 <div class="item-header">
-                    <span>אוניברסיטת בן גוריון | תואר ראשון במדעי המחשב</span>
-                    <span class="date">2015 - 2018</span>
+                    <span>מכללת כינרת - עמק הירדן | תואר הנדסאי אלקטרוניקה</span>
+                    <span class="date">2018 - 2020</span>
+                    <p>ניסיון בעבודה עם רכיבים אלקטרונים</p>
+                    <span>מכללת כינרת - עמק הירדן | תואר הנדסאי תוכנה</span>
+                    <span class="date">2023 - 2026</span>
+                    <p>ניסיון בכתיבת תוכנה ובשפות תכנות שונות</p>
                 </div>
-                <p>התמחות במערכות מבוזרות ובינה מלאכותית.</p>
+                <!-- <p>התמחות במערכות מבוזרות ובינה מלאכותית.</p> -->
             </div>
         </div>
     </section>
@@ -208,8 +213,8 @@
         <h2>כישורים טכניים</h2>
         <div class="section-content">
             <ul class="skills-container">
-                <li class="skill-tag">JavaScript (ES6+)</li>
-                <li class="skill-tag">HTML5 & CSS3</li>
+                <li class="skill-tag">JavaScript</li>
+                <li class="skill-tag">HTML & CSS</li>
                 <li class="skill-tag">React.js</li>
                 <li class="skill-tag">Node.js</li>
                 <li class="skill-tag">Python</li>
