--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             📍 טבריה | 
             🔗 <a href="#">LinkedIn</a>
         </div>
-        <img width=300px src="./me.jpg" alt="ds"/>
+        <!-- <img width=300px src="./me.jpg" alt="ds"/> -->
     </header>
 
     <section>
