--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             📍 טבריה | 
             🔗 <a href="#">LinkedIn</a>
         </div>
+        <img width="300px" src="me.jpg" alt="התמונה שלי"/>
         <!-- <img width=300px src="./me.jpg" alt="ds"/> -->
     </header>
 
